test/spec_vectors/local_get/fail/module_5.wat
(module (func $type-param-num-vs-num (param f32) (result i32) (i32.eqz (local.get 0))))